@@ -1,4 +1,5 @@
 ======================
+    --architecture-- removed a lot of KrViewItem's API
     ADDED: select remote encoding menu for fish, ftp and sftp protocols
     ADDED: clear-location-bar button a-la konqueror (configurable)
     ADDED: permissions column as octal numbers
